--- a/style.css
+++ b/style.css
@@ -42,3 +42,29 @@ header p {
     height: 70%;
     width: 70%;
 }
+.second-row{
+    width: 100%;
+    height: 100%;
+}
+
+.card img{
+    width: 80%;
+    height: 80%;
+    object-fit: cover;
+}
+.container1{
+    display: flex;
+    justify-content: space-around;
+
+}
+.card p{
+    width: 80%;
+    text-align: center;
+
+}
+.cta{
+    background-color: #3882f6;
+    color: #f9faf8;
+    display: flex;
+
+}
